@@ -147,6 +147,11 @@
                 <institution>U. of Puget Sound</institution>
             </contributor>
 
+            <contributor xml:id="zachjarvis">
+                <personname>Zach Jarvis</personname>
+                <institution>U. of Puget Sound</institution>
+            </contributor>
+
             <contributor xml:id="chilijohnson">
                 <personname>Chili Johnson</personname>
                 <institution>U. of Puget Sound</institution>
