@@ -10,6 +10,7 @@ Edit: Added missing Sage practice cell in Sage LI (Samuel Gonzalez)
 Edit: Theorem PSPHS, proof missing "+" (Katrina Hoefflinger)
 Edit: Fine-tune induction proof of Theorem EOMP
 Edit: Expanded Example MWIAA
+Edit: Solution MR.T80, added one step to proof (Zach Jarvis)
 Change: Streamline second half of the proof of Theorem BS
 Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
 Change: Theorems SSNS, BNS need case when n = r (Ken Price)
